--- a/apps/doodleart-frontend/app/globals.css
+++ b/apps/doodleart-frontend/app/globals.css
@@ -5,11 +5,15 @@
   --foreground: #171717;
 }
 
-@theme inline {
+:root {
+  --background: #ffffff;
+  --foreground: #171717;
   --color-background: var(--background);
   --color-foreground: var(--foreground);
   --font-sans: var(--font-geist-sans);
   --font-mono: var(--font-geist-mono);
+  --font-indie: var(--font-indie-flower);
+  --font-finger: var(--font-finger-paint);
 }
 
 @media (prefers-color-scheme: dark) {
@@ -23,4 +27,5 @@ body {
   background: var(--background);
   color: var(--foreground);
   font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif
+  /* font-family: var(--font-indie-flower); */
 }
